# Bomberman

./: .gitignore  .gitmodules  .nfs.20051058.564c  CMakeLists.txt  ClassGenerator.rb  INSTALL.sh  Makefile  README.md  TC.cpp  TODO.txt  author  bomberman  brewDependancy.sh  load_modules.sh
Other Stuff/gameEngine/: Agent.cpp  Agent.hpp  Bomb.cpp  Bomb.hpp  Bullet.hpp  CMakeLists.txt  Human.hpp  Level.cpp  Level.hpp  Makefile  Player.cpp  Player.hpp  bomberman  install_dependencies.sh  mainGame.cpp  mainGame.h
Other Stuff/gameEngine/Levels/: level1.txt
Other Stuff/gameEngine/Menu/: gabe2.cpp
Other Stuff/gameEngine/Shaders/: colourshading.vert
Other Stuff/gameEngine/gameEngine/: Bomb.hpp  Camera2D.cpp  Camera2D.hpp  FatalError.cpp  FatalError.hpp  GLSLProgram.cpp  GLSLProgram.hpp  IOManager.cpp  ImageLoader.cpp  ImageLoader.hpp  InputManager.cpp  Log.cpp  Logger.cpp  Logger.hpp  ResourceManager.cpp  Sprite.hpp  SpriteBatch.cpp  TextureCache.cpp  TextureCache.hpp  Timing.hpp  Vertex.cpp  game  mainGame.cpp  mainGame.hpp
Other Stuff/ggroener/audio/: backup_Makefile  links_info.txt  refinfo.c
Other Stuff/ggroener/audio/backup_sound_files/: SoundEngine.cpp
Other Stuff/includes/: Entity.hpp  Gamestate.hpp  Log.hpp  Menu.hpp  Obstacle.hpp  Player.hpp  bomberman.hpp
Other Stuff/srcs/: Bomb.cpp  Character.cpp  Explosion.cpp  Gamestate.cpp  Log.cpp  Menu.cpp  Obstacle.cpp  Opponent.cpp  Rendertext.cpp  bomberman.cpp
SoundEngine/: SoundEngine.cpp  SoundEngine.hpp  SoundMain.cpp
bombFinal/: CMakeLists.txt  INSTALL.sh  Makefile  README.md  game
bombFinal/Bomberman/: CMakeLists.txt
bombFinal/Bomberman/SoundEngine/: CMakeLists.txt  SoundMain.cpp
bombFinal/Bomberman/gameEngine/include/: BoundingBoxSet.hpp  Logger.hpp  Model.hpp  Renderer.hpp  Sound.hpp
bombFinal/Bomberman/gameEngine/src/: BoundingBoxSet.cpp  Logger.cpp  Renderer.cpp  SceneObject.cpp
bombFinal/Bomberman/include/: GameLogic.hpp  KeyInput.hpp
bombFinal/Bomberman/src/: GameLogic.cpp  GameLogicCamera.cpp  GameLogicWall.cpp  main.cpp
bombFinal/gameEngine/include/: GetTokens.hpp  SceneObject.hpp
bombFinal/gameEngine/src/: GetTokens.cpp  Image.cpp
bombFinal/include/: GameLogic.hpp  GameLogicCamera.hpp  GameLogicWall.hpp  KeyInput.hpp
bombFinal/src/: GameLogic.cpp
cdebruyn/: Makefile  author
cdebruyn/environ/: Environ.class.cpp  Environ.class.hpp
cdebruyn/environ/GLFW/: GLFW.class.cpp  GLFW.class.hpp
cdebruyn/include/: GLFW.class.hpp  MainComponent.class.hpp  ReadLib.class.hpp  Time.class.hpp  Window.class.hpp  main.hpp
cdebruyn/lib/: lib.txt
cdebruyn/shared/: Coord.cpp  Coord.hpp  Direction.cpp  Direction.hpp  IDisplay.hpp
cdebruyn/src/: GLFW.class.cpp  MainComponent.class.cpp  MainComponent.cpp  MainComponent.hpp  ReadLib.class.cpp  Time.class.cpp  Window.class.cpp  Window.class.hpp  main.cpp
cmakeRef/: -.c  Makefile
gameEngine/: ._Levels  ._Shaders  ._Textures  ._main.cpp  ._mainGame.cpp  ._mainGame.h  Agent.cpp  Agent.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  Gun.cpp  Gun.hpp  Human.cpp  Human.hpp  Level.cpp  Level.hpp  Makefile  Player.cpp  Player.hpp  Zombie.cpp  Zombie.hpp  bomberman_log.txt  colourshading.frag  game  install_dependencies.sh  main.cpp  mainGame.cpp  mainGame.h
gameEngine/Levels/: ._level1.txt
gameEngine/Menu/: CMakeLists.txt  gabe.cpp
gameEngine/Shaders/: ._textureShading.frag  ._textureShading.vert
gameEngine/SoundEngine/: SoundEngine.cpp  SoundEngine.hpp  SoundMain.cpp
gameEngine/Textures/: ._credits.txt
gameEngine/gameEngine/: ._InputManager.cpp  ._InputManager.hpp  Bomb.cpp  Bomb.hpp  BulletOld.cpp  BulletOld.hpp  Camera2D.cpp  Camera2D.hpp  FatalError.cpp  FatalError.hpp  GLSLProgram.cpp  GLSLProgram.hpp  GLTexture.hpp  IOManager.cpp  IOManager.hpp  ImageLoader.cpp  ImageLoader.hpp  InputManager.cpp  InputManager.hpp  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  Makefile  ResourceManager.cpp  ResourceManager.hpp  Sprite.cpp  Sprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp  TextureCache.cpp  TextureCache.hpp  Timing.cpp  Timing.hpp  Vertex.cpp  Vertex.hpp  Window.cpp  Window.hpp  bomberman_log.txt  gameEngine.cpp  (+5 more)
gameEngine/gameEngine/Engine/: Makefile
gameEngine/gameEngine/textures/: ._jimmyJump_pack
gameEngine/gameEngine/textures/jimmyJump_pack/: ._PNG  ._license.txt
gameEngine/include/: BoundingBoxSet.hpp  Enemy.hpp  GameState.hpp  GetTokens.hpp  Image.hpp  Logger.hpp  Menu.hpp  Model.hpp  Renderer.hpp  SceneObject.hpp  Sound.hpp
gameEngine/src/: BoundingBoxSet.cpp  Enemy.cpp  GameState.cpp  GetTokens.cpp  Image.cpp  Logger.cpp  Menu.cpp  Model.cpp  Renderer.cpp  SceneObject.cpp  Sound.cpp  perspectiveMatrixLightedShader.vert  shader.cpp  text2D.cpp
ggroener/audio/: links.txt  openal-example  openal-example.c  openal-example.cpp  sound.cpp
ggroener/audio/backup_sound_files/: SoundMain.cpp
include/: GameLogic.hpp  KeyInput.hpp  MapLoader.hpp  Settings.hpp  menu.hpp  menu3.hpp  menu9.hpp
includes/: Bomb.hpp  Button.hpp  Character.hpp  Explosion.hpp  Gamestate.hpp  ICharacter.hpp  IEntity.hpp  Log.hpp  Logger.hpp  Menu.hpp  Obstacle.hpp  Opponent.hpp  Player.hpp  Powerup.hpp  Rendertext.hpp  Vector.hpp  Wall.hpp  bomberman.hpp
maps/: 0.txt  1.txt  2.txt  3.txt  4.txt  map.txt
src/: GameLogic.cpp  GameLogicCamera.cpp  GameLogicWall.cpp  MapLoader.cpp  Settings.cpp  main.cpp  menu.cpp  menu3.cpp  menu5.cpp  menu9.cpp
srcs/: Bomb.cpp  Button.cpp  Character.cpp  Entity.cpp  Explosion.cpp  Gamestate.cpp  ICharacter.cpp  IEntity.cpp  Log.cpp  Logger.cpp  Obstacle.cpp  Opponent.cpp  Player.cpp  Powerup.cpp  Rendertext.cpp  Vector.cpp  Wall.cpp  bomberman.cpp
